test/results/invalid-ambiguous-slot.owltest.stderr
error: in the rule 'a', the name 'identifier' could refer to two different rules

    b@identifier : b
    ~~~~~~~~~~~~    
  ...
    identifier : c
    ~~~~~~~~~~    

